# ActuallyOpenSnow

./: .dockerignore  .env.template  .gitignore  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml
backend/: Dockerfile  Dockerfile.dev  README.md  requirements.txt
backend/app/: __init__.py  cache.py  main.py  models.py  resorts.py
backend/tests/: conftest.py  test_batch.py  test_blend_config.py  test_compare.py  test_forecasts.py  test_health.py  test_helpers.py  (+2 more)
db/: __init__.py  alembic.ini  models.py  seed.py  session.py
engine/: Dockerfile  __init__.py  config.py  requirements.txt  scheduler.py
engine-backend/: Dockerfile  requirements.txt
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
weather/: README.md  pyproject.toml
weather/examples/: .debug_cache.sqlite  .weather_cache.sqlite  __init__.py  jackson_hole_aifs.py  quickstart.py
weather/src/mountain_weather.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
weather/src/weather/: __init__.py
weather/src/weather/clients/: __init__.py  base.py  herbie_client.py  openmeteo.py
weather/src/weather/config/: __init__.py  defaults.py  models.py
weather/src/weather/domain/: __init__.py  errors.py  forecast.py  quantities.py
weather/src/weather/parsing/: __init__.py  grib2_parser.py  openmeteo_parser.py
weather/src/weather/units/: __init__.py  convert.py  normalize.py  openmeteo_units.py
weather/src/weather/utils/: __init__.py  geo.py  snow.py  time.py
weather/tests/: __init__.py  test_client_openmeteo_mocked.py  test_config_models.py  test_config_models_herbie.py  test_domain_errors.py  test_equivalence.py  test_forecast_getters.py  test_forecast_serialization.py  test_grib2_parser.py  test_herbie_client.py  test_openmeteo_parser.py  test_openmeteo_units.py  test_quantities.py  test_range_totals.py  test_units_convert.py  test_units_normalize.py  test_utils_geo.py  test_utils_time.py
(+53 files in other folders)
