[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mountain-weather"
version = "0.1.0"
description = "A typed Python API for fetching mountain-relevant weather forecasts"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Mountain Weather Contributors"}
]
keywords = ["weather", "forecast", "mountains", "skiing", "open-meteo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Typing :: Typed",
]

dependencies = [
    "openmeteo-requests>=1.2.0",
    "requests-cache>=1.1.0",
    "retry-requests>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
herbie = [
    "herbie-data>=2024.1.0",
    "xarray>=2023.1.0",
    "cfgrib>=0.9.10",
    "eccodes>=1.6.0",
    "scikit-learn>=1.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "responses>=0.23.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/example/mountain-weather"
Documentation = "https://github.com/example/mountain-weather#readme"
Repository = "https://github.com/example/mountain-weather.git"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
weather = ["py.typed"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

